--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -1,6 +1,6 @@
 {
     "navbar": {
-        "Camera": "الة تصوير",
+        "Cameras": "الة تصوير",
         "Reporting": "التقارير",
         "Settings": "إعدادات",
         "Welcome": "أهلا بك",
