--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,6 +1,6 @@
 {
     "navbar": {
-        "Camera": "Camera",
+        "Cameras": "Cameras",
         "Reporting": "Reporting",
         "Settings": "Settings",
         "Welcome": "Welcome",
